copies and capistrano deploy

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,8 +4,10 @@
 			<div class="col">
 				<br><br>
 				<div class="justify-content-between">
-					<p>Do you want know more or just have a question? Write to us.</p>
-					<button class="btn btn-second">Contactenos</button>					
+          <p>
+            ¿Quieres saber más o tienes una pregunta? Escríbenos.
+          </p>
+					<button class="btn btn-second">Contáctenos</button>					
 				</div>
 				<hr class="border">
 			</div>
