--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -3,8 +3,22 @@
 		<div class="row">
 			<div class="col-md-6">
 				<div class="container-text p-3">
-					<h1>¿Que hacemos?</h1>	
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur quibusdam quasi ullam optio quae blanditiis necessitatibus enim quaerat reprehenderit minima expedita nemo rerum, ea at odit aliquam distinctio soluta maiores Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur aliquid architecto, quam, delectus aperiam consequuntur fugiat voluptates, dolore similique ullam repudiandae amet veniam praesentium? Recusandae delectus itaque odit ut autem? </p>
+          <h2>
+            ¿Qué hacemos?
+            <br/>
+            <br/>
+          </h2>
+          <p>
+            Construimos software a la medida altamente asequible para
+            empresas grandes y pequeñas. Utilizamos procesos ágiles para
+            prestar servicios de TI (desarrollo a la medida,
+            fábrica de software, despliegue de soluciones ERP)
+            que resuelvan los retos de su compañia.
+            <br/>
+            <br/>
+            Lo invitamos a conocer más sobre nosotros, a explorar 
+            nuestros servicios o a compartirnos su reto tecnológico
+          </p>
 					<button class="btn btn-primary">Conoce más</button>						
 				</div>
 			</div>
