--- a/app/views/pages/_customers.html.erb
+++ b/app/views/pages/_customers.html.erb
@@ -4,7 +4,10 @@
 			<div class="col">
 				<div class="container-text text-third">
 					<h1>Nuestros Clientes</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nisi ea asperiores eius mollitia reprehenderit maxime hic atque.</p>					
+          <p>
+            Hemos ayudado a que las ideas cobren vida mientras construimos 
+            prácticas comerciales sostenibles en todas las industrias.
+          </p>					
 				</div>
 			</div>
 		</div>
