--- a/app/views/pages/_hero.html.erb
+++ b/app/views/pages/_hero.html.erb
@@ -3,8 +3,17 @@
 		<div class="row">
 			<div class="col-md-6 col-sm-12">
 				<div class="container-text pt-5">
-					<h3>Web mobile and Softwhere Development Solutions for All Your Entrerprise Needs</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, magni, earum molestiae id vero sit praesentium. Et aut, molestias inventore. Perferendis impedit id, perspiciatis similique non error inventore, corporis soluta?</p>
+          <h3>
+            Diseñamos y contruimos experiencias digitales que
+            transforman organizaciones.
+            <br/>
+            <br/>
+          </h3>
+          <p>
+            Somos una agencia de productos digitales que ofrece estrategias 
+            excepcionales, diseño, ingenieria, desarrollo de aplicaciones web/moviles
+            y consultoria se softwere personalizado. 
+          </p>
 					<br>
 					<button class="btn btn-primary">Cuentanos tu proyecto</button>
 				</div>
