--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -13,13 +13,13 @@
       <a class="nav-link" href="#">Trabajos</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Tecnologia</a>
+      <a class="nav-link" href="#">Tecnología</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Blog</a>
     </li>
     <li class="nav-item">
-      <a class="ml-3 btn btn-outline-primary" href="#">Contactanos</a>
+      <a class="ml-3 btn btn-outline-primary" href="#">Contáctanos</a>
     </li>
   </ul>    
 </nav>
